Carga de las Ultimas Actualizaciones
Se cambio el sistema validación de credenciales de .js a .php, se agrego el modo obscuro en el dashboard del admin y del empleado,

--- a/MIAUtomotriz WEB/gestionEmpleados.html
+++ b/MIAUtomotriz WEB/gestionEmpleados.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/gestionEmpleados.css">
+    <link rel="stylesheet" href="styles/gestionEmpleados.css">
     <title>Gestion de Empleados - MiAutomotriz</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -46,7 +46,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#">
+                <a href="/gestionVehiculos.html">
                     <i class="fas fa-car"></i>
                     <span>Vehículos</span>
                 </a>
